# food_material

./: .gitignore  group_img.py  main.py  main_lzn.py  simple_network.py  smooth_eval.py  test.py  testttttttt.py  try.py
accuracy/: class2_accuracy.py  default_accuracy.py  multi_accuracy.py
code_snipet/: temp.txt
config/: chamo.py  chamo_class2.py  chamo_full_run.py  config_lzn.py  config_st.py  test_config.py
data_convertor/: auto_naming.py  img_2_tfrecord.py  img_2_tfrecord_2class.py  img_2_tfrecord_slim.py  imgutils.py  jpegcheck.py  process_img.py  split_img.py
data_preprocessing/: convert_my_data.py  default_preprocess.py  test_preprocess.py
data_scraping/: copy_out_test.py  get_imgs.py  materil_name.py  picDevider.py  shuffle_files.py  sort_material.py
eval/: default_eval.py
loss/: class2_loss.py  default_loss.py  entropy_loss.py
net/: mobilenet_v2.py  mobilenet_v2_impl.py  vgg16.py
net/mobilenet/: mobilenet.py  mobilenet_v2.py
optimizer/: default_opt.py
test/: test.ckpt.index
tool/: clean_img.py  scrap_img.py
tool/GPU_monitor/: gpu_monitor.py
tool/GPU_monitor/templates/: main.html
tool/img_sim_check/: CMakeLists.txt  main.cpp  ransac.cpp
tool/img_sim_check/script/: check_sim.sh  check_sim_all.sh  gen.sh
tool/scrap_img/: scrap_all.py  scrap_img.py  scrap_img_both.py  scrap_sougou.py
tool/server/: ajaxfileupload.js  index.html  server.py  update_train_imgs.py
training/: train_my_net.py
utils/: cal_acc.py  data_helper.py  dataset_utils.py  global_var.py  logger.py
